towpath_walk_tracker/static/css/map.css
html, body {
	/* width: 100%; */

	/* height: 100%; */
	margin: 0;
	padding: 0;
}

html, body, #map {
	height: 100%;
	font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
}

#map {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
}

.sidebar.collapsed {
	width: 42px !important;
}


.lorem {
	font-style: italic;
	color: #aaa;
}

div#flDebugToolbarHandle {
	top: 20% !important;
}


/* Walk Form Table */
table.walk-points th.point-idx, table.walk-points td {
	vertical-align: top;
}

div.walk-points-scroll {
	overflow-y: scroll;

	/* max-height:400px; */
	flex-grow: 1;
}

table.walk-points tbody tr:first-child .point-move-up {
	background-color: #a0a6ab !important;
	border-color: #a0a6ab !important;
	pointer-events: none;
}

table.walk-points tbody tr:nth-last-child(1 of :not(.d-none)) .point-move-down {
	background-color: #a0a6ab !important;
	border-color: #a0a6ab !important;
	pointer-events: none;
}

